[2.8 Crash] Copy > Paste Annotation Stroke Crashes Blender #56686

Closed
opened 2018-09-04 15:41:01 +02:00 by Gibran Kaleel · 7 comments

System Information
Windows 10 Pro 64-bit (1703.15063)
GTX 970 (WHQL 398.36)

Blender Version
Broken: 2.80 1d04d7721b
Worked: -

Short description of error

Copying & Pasting Annotation Strokes via Ctrl+C/Ctrl+V -or- D+Q (GP Tools) > More > Copy/Paste Crashes to Desktop.

Exact steps for others to reproduce the error

  1. New scene > Create annotation stroke via D + LMB -or- Annotation Tool
  2. D + Tab > Stroke Edit Mode > A (Select All Points)
  3. D + Q > GP Tools > More > Copy
  4. Paste > Crash.

Alternatively result is the same with Ctrl+C > Ctrl+V to Copy/Paste.

2.8_Annotate_Copy_Paste_Crash.mp4

Note: Doesn't seem to crash with strokes created under a GP Object (Draw Mode) using above steps, as those seem to behave a little different from annotation strokes.

**System Information** Windows 10 Pro 64-bit (1703.15063) GTX 970 (WHQL 398.36) **Blender Version** Broken: 2.80 1d04d7721b2 Worked: - **Short description of error** Copying & Pasting Annotation Strokes via Ctrl+C/Ctrl+V -or- D+Q *(GP Tools)* > More > Copy/Paste Crashes to Desktop. **Exact steps for others to reproduce the error** 1. New scene > Create annotation stroke via D + LMB -or- Annotation Tool 2. D + Tab > Stroke Edit Mode > A *(Select All Points)* 3. D + Q > GP Tools > More > Copy 4. Paste > Crash. *Alternatively result is the same with Ctrl+C > Ctrl+V to Copy/Paste.* [2.8_Annotate_Copy_Paste_Crash.mp4](https://archive.blender.org/developer/F4555991/2.8_Annotate_Copy_Paste_Crash.mp4) Note: Doesn't seem to crash with strokes created under a GP Object *(Draw Mode)* using above steps, as those seem to behave a little different from annotation strokes.
Author

Added subscriber: @JonDoe286

Added subscriber: @JonDoe286
Gibran Kaleel changed title from [Crash] Copy > Paste Annotation Stroke Crashes Blender to [2.8 Crash] Copy > Paste Annotation Stroke Crashes Blender 2018-09-04 16:24:47 +02:00

Added subscriber: @antoniov

Added subscriber: @antoniov

The problem is the edit mode must be disabled in Annotations. I'm going to check that.

Annotations are not designed to copy/paste or edit.

The problem is the edit mode must be disabled in Annotations. I'm going to check that. Annotations are not designed to copy/paste or edit.
Author

Makes sense. I was trying to copy/paste some annotations/notes from one annotation layer to another when it crashed. Thought I'd report it. Hope this helps.

Edit: Although I'm not sure how annotate strokes would be without D + Tab (Edit Mode) as it has been extremely valuable when working with lines and ruff notes. And being able to resize, realign, reposition them quickly.

I even use draw lines and reposition the points in edit mode to measure lengths and angles when creating accurate shapes, etc. Hope it doesn't go away. Copy / Paste into another layer, I can live without.

Makes sense. I was trying to copy/paste some annotations/notes from one annotation layer to another when it crashed. Thought I'd report it. Hope this helps. Edit: Although I'm not sure how annotate strokes would be without D + Tab *(Edit Mode)* as it has been extremely valuable when working with lines and ruff notes. And being able to resize, realign, reposition them quickly. I even use draw lines and reposition the points in edit mode to measure lengths and angles when creating accurate shapes, etc. Hope it doesn't go away. Copy / Paste into another layer, I can live without.
Antonio Vazquez self-assigned this 2018-09-04 17:05:35 +02:00

This issue was referenced by 2dff0c99c0

This issue was referenced by 2dff0c99c08cae80baa14f7f4b1e5d443765e273

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

There are reasons to disable these options in annotations. By design decisions, annotations must be a simple tool to add or erase notes, but never edit things. If you need to do all these things, use a GP Object. Keep all these features in annotations makes necessary duplicate code and this increase the maintenance and bugs.

For measurements, you have in Blender an add-on to do that called "MeasureIt".

There are reasons to disable these options in annotations. By design decisions, annotations must be a simple tool to add or erase notes, but never edit things. If you need to do all these things, use a GP Object. Keep all these features in annotations makes necessary duplicate code and this increase the maintenance and bugs. For measurements, you have in Blender an add-on to do that called "MeasureIt".
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56686
No description provided.